@@ -1,5 +1,7 @@
 DIST libtpproto-cpp-0.1.0.tar.gz 365113 RMD160 13f204b70c4a50109737dbbf85a82866597b5e25 SHA1 e574728d3135120e98bc40df685f306ce1c3f896 SHA256 60259f077773b94cd25272bcc43b909a542c5f6f3f80547a55bff11b5e07db6d
+DIST libtpproto-cpp-0.1.1.tar.gz 394972 RMD160 2422a8462cfcf4f67e2d830f9b9d1389bfc581c5 SHA1 7bcf3ff0320cd85ca0c22ff717e13f26a0e9d873 SHA256 a9c23607bc288eeacc9f708e9b046a3a15e694ae43529f42d7b924066c7e1656
 EBUILD libtpproto-cpp-0.1.0.ebuild 997 RMD160 920fee6df29224a5dae4c4a7c5a857384b9e08dd SHA1 6da622d3aeeda1fae9c6f7ed0cbe242e7ac45e21 SHA256 3af09cd58d540acbf574528ff8f78a93db0e56dc9adb784e502c291d7c00b193
+EBUILD libtpproto-cpp-0.1.1.ebuild 997 RMD160 920fee6df29224a5dae4c4a7c5a857384b9e08dd SHA1 6da622d3aeeda1fae9c6f7ed0cbe242e7ac45e21 SHA256 3af09cd58d540acbf574528ff8f78a93db0e56dc9adb784e502c291d7c00b193
 EBUILD libtpproto-cpp-9999.ebuild 1067 RMD160 193e7332ee5adabea507671105b7d05ef61f8e4e SHA1 1bd4096be7b8c711f1a1015c0d398e8fcc2d53e8 SHA256 4cb268ff73214a52739c714743c63f3d95f14e4bef3adf37f72733e76d4a8ce8
-MISC ChangeLog 826 RMD160 858030d931fc4e816fec26a144b915208c6d1c3c SHA1 b4bfebd53fcacf2b754bbd12ce29cad6048cee94 SHA256 9307ebd5ccf3232d9c4b995b9009b4639e9a4a6025afe6c291c58a18e29c6111
+MISC ChangeLog 970 RMD160 ce2a015371796aebb0bf19727f1b75a590d64072 SHA1 626cdf027bc773bfe9ffb8888921dcf8da8ca096 SHA256 fdb8cfeb23698d97a1ca2025b0ed7770edd4bc4a5aa38b41e86c3d85c3ef9f7d
 MISC metadata.xml 375 RMD160 9a3a066e62cdbfcb7fb2f14b35a482f375e4ed33 SHA1 648c02c63f450ca1080f13c9a2caa20178a7e9d7 SHA256 7a74f92bc3e30cc68545f4b8e0bec8188a1c9d2bf580e49b9d158cd052930718
