@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libtpproto-0.1.1 (21 Jan 2009)
+
+  21 Jan 2009; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-cpp-0.1.1.ebuild:
+  Version bump (long overdue)
+
   19 Jan 2009; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-cpp-0.1.0.ebuild:
   Skip test phase (requires running tpserver-cpp)
 
